--- a/rpsgame.html
+++ b/rpsgame.html
@@ -6,6 +6,12 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
+    <div>
+        <button id='rock'>Rock</button>
+        <button id='paper'>Paper</button>
+        <button id='scissors'>Scissors</button>
+    </div>
+    <div id='result'></div>
     <script src="rpsScript.js"></script>
 </body>
 </html>
