--- a/rpsgame.html
+++ b/rpsgame.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div>
-        <button id='rock'>Rock</button>
-        <button id='paper'>Paper</button>
-        <button id='scissors'>Scissors</button>
+        <button id='rock' class='buttons'>Rock</button>
+        <button id='paper' class='buttons'>Paper</button>
+        <button id='scissors' class='buttons'>Scissors</button>
     </div>
     <div id='result'></div>
     <script src="rpsScript.js"></script>
