used DOM method to make additions to both html page and .js file

--- a/rpsgame.html
+++ b/rpsgame.html
@@ -6,10 +6,11 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
+    <div id = "container"></div>
     <div>
-        <button id='rock' class='buttons'>Rock</button>
-        <button id='paper' class='buttons'>Paper</button>
-        <button id='scissors' class='buttons'>Scissors</button>
+        <button id='rock' class='buttons' value='rock'>Rock</button>
+        <button id='paper' class='buttons' value='paper'>Paper</button>
+        <button id='scissors' class='buttons' value='scissors'>Scissors</button>
     </div>
     <div id='result'></div>
     <script src="rpsScript.js"></script>
